--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,15 @@ body {
   outline: 0;
   outline-offset: 0;
 }
+h3 {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+  color: #1F2041;
+}
 input[type="submit"] {
   font-family: Montserrat;
   font-style: normal;
@@ -52,6 +61,7 @@ input[type="reset"] {
 @import './blocks/button-default/button-default';
 @import './blocks/button-else/button-else.scss';
 @import './blocks/Form-Elements/big-button-arrow/big-button-arrow.scss';
+@import './blocks/Form-Elements/bullet-list/bullet-list.scss';
 
 .formElements{
   position: relative;
@@ -442,6 +452,7 @@ input[type="reset"] {
   }
 }
 .buttons-container {
+  margin-bottom: 376px;
   .name {
     margin-bottom: 16px;
   }
@@ -465,4 +476,13 @@ input[type="reset"] {
       margin-right: 20px;
     }
   }
+}
+.second-dropdown-guests-container-expanded {
+  margin-bottom: 98.44px;
+  .name {
+    margin-bottom: 5px;
+  }
+}
+.bullet-list-container {
+  margin-bottom: 231px;
 }
