--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -70,17 +70,6 @@ html(lang="ru")
             +checkbox-list()
           .checkbox-list-expanded-container
             +checkbox-list("Завтрак","Письменный стол","Стул для кормления","Кроватка", "Телевизор","Шампунь")
-          .features-container
-            .comfort
-              .img-wrap 
-                img(src="./src/img/insert_emoticon.svg", alt="улыбка")
-              p.text Комфорт Шумопоглощающие стены
-            .line
-            .windows
-              .img-wrap 
-                img(src="./src/img/location_city.svg", alt="дом")
-              p.text Удобство <br>Окно в каждой из спален
-            .line
         .colomn2
           .checkbox-buttons-container
             h3.name Checkbox Buttons
@@ -157,7 +146,30 @@ html(lang="ru")
           .bullet-list-container
             .bullet-list
               +bullet-list("bullet list")
-        .comment
+        .footer-container
+          .features-container
+            .comfort
+              .img-wrap 
+                img(src="./src/img/insert_emoticon.svg", alt="улыбка")
+              p.text Комфорт Шумопоглощающие стены
+            .line
+            .windows
+              .img-wrap 
+                img(src="./src/img/location_city.svg", alt="дом")
+              p.text Удобство <br>Окно в каждой из спален
+            .line
+          .comment-container
+            .header
+              .avatar
+                img(src="./src/img/avatar.png", alt="alt")
+              .user-data
+                span.user-name Мурад Сарафанов
+                br
+                span.post-time 5 дней назад
+            .footer
+              .like-button
+                +like-button(11)
+              p.text Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     //- script(src="../JsSlider/jquery-asRange.js")
