Created 'emblem' mixin, deleted emblem folder

--- a/src/pages/mixins.pug
+++ b/src/pages/mixins.pug
@@ -1,3 +1,5 @@
+mixin emblem()
+  img(src="./src/img/emblem.svg", alt="эмблема")
 mixin button-default(text)
   .button-default__text=text
 mixin button-else (text)
