--- a/src/blocks/Form-Elements/dopdown-guests/__dropdown-body/dropdown-guests__dropdown-body.scss
+++ b/src/blocks/Form-Elements/dopdown-guests/__dropdown-body/dropdown-guests__dropdown-body.scss
@@ -1,4 +1,6 @@
 &__dropdown-body {
+  position: absolute;
+  z-index: 1;
   display: none;
   width: 100%;
   height: 159px;
@@ -7,4 +9,5 @@
   box-sizing: border-box;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   border-radius: 0 0 4px 4px;
+  background: #FFFFFF;
 }
