--- a/src/blocks/Form-Elements/like-button/like-button.scss
+++ b/src/blocks/Form-Elements/like-button/like-button.scss
@@ -22,6 +22,15 @@
     justify-content: center;
     align-items: center;
   }
+  &__active {
+    position: absolute;
+    opacity: 0;
+    z-index: 1;
+  }
+  &__disable {
+    position: absolute;
+    opacity: 1;
+  }
   &__count{
     position: absolute;
     right: 12px;
@@ -41,5 +50,8 @@
   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
   .like-button__count {
     color:  #BC9CFF;;
+  }
+  .like-button__active {
+    opacity: 1;
   }
 }
