--- a/src/pages/mixins.pug
+++ b/src/pages/mixins.pug
@@ -41,7 +41,8 @@ mixin dropdown-room()
           .dropdown-room__count 0
           .dropdown-room__plus-button.plus-button
             +plus-button()
-mixin dropdown-guests()
+mixin dropdown-guests(title)
+  h3.dropdown-guests__title= title 
   .dropdown-guests__dropdown-field
     .dropdown-guests__arrow
       img(src="./src/img/expand_more.svg", alt="стрелка")
@@ -71,7 +72,7 @@ mixin dropdown-guests()
             +plus-button()
     .dropdown-guests__reset-submit
       input(class="dropdown-guests__reset" type="reset", value="очистить")
-      input(class="dropdown-guests__submit" type="submit", value="применить")
+      input(class="dropdown-guests__submit" type="button", value="применить")
 mixin custom-checkbox(title)
   label(class="custom-checkbox")
     input(type="checkbox")
@@ -109,7 +110,8 @@ mixin toggle-item(text)
 mixin like-button(number)
   .like-button__body
   .like-button__like
-    img(src="./src/img/favorite_border.svg" alt="лайк")
+    img(class="like-button__active" src="./src/img/favorite.svg", alt="лайк")
+    img(class="like-button__disable" src="./src/img/favorite_border.svg" alt="лайк")
   .like-button__count=number
 mixin star-rate()
   ul.star-rate__list
