--- a/src/blocks/button-else/button-else.scss
+++ b/src/blocks/button-else/button-else.scss
@@ -7,15 +7,17 @@
   position: relative;
   @include button-w-h(99px,44px);
   border-radius: 22px;
-}
-.button-else::before {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  content: '';
-  background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-  border-radius: 22px;
-}
-.button-else:hover::before {
-  opacity: 0.5;
+  border-width: 0px;
+  padding: 0;
+  &::before {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    border-radius: 22px;
+  }
+  &:hover::before {
+    opacity: 0.5;
+  }
 }
