--- a/src/blocks/button-default/_button-default.scss
+++ b/src/blocks/button-default/_button-default.scss
@@ -6,7 +6,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.button-default:hover {
-  opacity: 0.5;
+  border-width: 0px;
+  &:hover {
+    opacity: 0.5;
+  }
 }
