--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,14 @@ body {
   outline: 0;
   outline-offset: 0;
 }
+h1 {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 23.4px;
+  line-height: 30px;
+  color: #1F2041;
+}
 h3 {
   font-family: Montserrat;
   font-style: normal;
@@ -65,8 +73,11 @@ input[type="reset"] {
 .cards {
   max-width: 1440px;
   display: flex;
-  padding: 150px 140px 140px 140px;
+  padding: 150px 7.29166667vw 140px 7.29166667vw;
   background: #F4F4F6;
+  @media (max-width: 360px) {
+    padding: 150px 2.29166667vw 140px 2.29166667vw;
+  }
 }
 .emblem {
   position: absolute;
@@ -74,4 +85,46 @@ input[type="reset"] {
   height: 48px;
   left: 30px;
   top: 30px;
+}
+.colomn1 {
+  max-width: 380px;
+}
+.room-selection {
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding: 39px 1.51041667vw 30px 1.51041667vw;
+  &__title{
+    margin-bottom: 20px;
+  }
+  &__dates {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20.56px;
+  }
+  &__name {
+    margin-bottom: 5.44px;
+  }
+  &__arrival{
+    position: relative;
+    width: 150px;
+  }
+  &__departure {
+    position: relative;
+    width: 150px;
+  }
+  &__dropdown-arrow{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    width: 44px;
+    height: 44px;
+    justify-content: center;
+    align-items: center;
+  }
+  &__dropdown-guests {
+    margin-bottom: 32px;
+  }
 }
