--- a/src/main.scss
+++ b/src/main.scss
@@ -22,7 +22,7 @@ h3 {
   text-transform: uppercase;
   color: #1F2041;
 }
-input[type="submit"] {
+input[type="button"] {
   font-family: Montserrat;
   font-style: normal;
   font-weight: bold;
@@ -70,6 +70,7 @@ input[type="reset"] {
 @import './blocks/button-else/button-else.scss';
 @import './blocks/Form-Elements/big-button-arrow/big-button-arrow.scss';
 @import './blocks/Form-Elements/bullet-list/bullet-list.scss';
+@import './blocks/Cards/room-selection/room-selection.scss';
 .cards {
   max-width: 1440px;
   display: flex;
@@ -87,44 +88,10 @@ input[type="reset"] {
   top: 30px;
 }
 .colomn1 {
+  display: flex;
+  flex-direction: column;
   max-width: 380px;
-}
-.room-selection {
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  padding: 39px 1.51041667vw 30px 1.51041667vw;
-  &__title{
-    margin-bottom: 20px;
-  }
-  &__dates {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20.56px;
-  }
-  &__name {
-    margin-bottom: 5.44px;
-  }
-  &__arrival{
-    position: relative;
-    width: 150px;
-  }
-  &__departure {
-    position: relative;
-    width: 150px;
-  }
-  &__dropdown-arrow{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    width: 44px;
-    height: 44px;
-    justify-content: center;
-    align-items: center;
-  }
-  &__dropdown-guests {
-    margin-bottom: 32px;
+  .room-selection {
+    margin-bottom: 40px;
   }
 }
