Added 'login-data' block

--- a/src/pages/mixins.pug
+++ b/src/pages/mixins.pug
@@ -149,5 +149,6 @@ mixin room-selection()
       +dropdown-guests('гости')
     button.big-button-arrow.room-selection__big-button-arrow
       +big-button-arrow("подобрать номер")
-
-
+mixin login-data()
+  +text-field-default("Email")
+  +text-field-default("Пароль")
