--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -15,8 +15,10 @@ html(lang="ru")
         +emblem()
       .container
         .colomn1
-          .room-selection
+          form.room-selection
             +room-selection()
+          form.registration
+            +registration()
         .colomn2
         .colomn3
     script(src="https://code.jquery.com/jquery-3.5.1.min.js")
