--- a/fonts.css
+++ b/fonts.css
@@ -39,7 +39,7 @@
        url('./fonts/quicksand-v21-vietnamese_latin-ext_latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('./fonts/quicksand-v21-vietnamese_latin-ext_latin-700.svg#Quicksand') format('svg'); /* Legacy iOS */
 }
-@font-face {
+/* @font-face {
 	font-family: 'Montserrat';
 	src: url('fonts/montserrat-v14-latin_cyrillic-regular.eot');
 	src: local('☺'), url('fonts/montserrat-v14-latin_cyrillic-regular.woff') format('woff'), url('fonts/montserrat-v14-latin_cyrillic-regular.ttf') format('truetype'), url('fonts/montserrat-v14-latin_cyrillic-regular.svg') format('svg');
@@ -53,4 +53,30 @@
 	src: local('☺'), url('fonts/montserrat-v14-latin_cyrillic-700.woff') format('woff'), url('fonts/montserrat-v14-latin_cyrillic-700.ttf') format('truetype'), url('fonts/montserrat-v14-latin_cyrillic-700.svg') format('svg');
 	font-weight: bold;
 	font-style: normal;
+} */
+/* montserrat-regular - latin-ext_latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Regular'), local('Montserrat-Regular'),
+       url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-700 - latin-ext_latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  src: url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-700.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Bold'), local('Montserrat-Bold'),
+       url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-700.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/montserrat-v14-latin-ext_latin_cyrillic-700.svg#Montserrat') format('svg'); /* Legacy iOS */
 }
