Connected 'reservation' and 'login' blocks

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -20,6 +20,10 @@ html(lang="ru")
           form.registration
             +registration()
         .colomn2
+          form.reservation
+            +reservation()
+          form.login
+           +login()
         .colomn3
     script(src="https://code.jquery.com/jquery-3.5.1.min.js")
     script(src="https://atuin.ru/demo/ui-slider/jquery-ui.min.js")
