--- a/src/main.scss
+++ b/src/main.scss
@@ -80,6 +80,8 @@ input[type="reset"] {
 @import './blocks/Cards/room-selection/room-selection.scss';
 @import './blocks/Form-Elements/login-data/login-data.scss';
 @import './blocks/Cards/registration/registration.scss';
+@import './blocks/Cards/reservation/reservation.scss';
+@import './blocks/Cards/login/login.scss';
 .cards {
   max-width: 1440px;
   display: flex;
@@ -98,6 +100,7 @@ input[type="reset"] {
 }
 .container {
   display: flex;
+  flex-wrap: wrap;
 }
 .colomn1 {
   display: flex;
@@ -108,4 +111,12 @@ input[type="reset"] {
     margin-bottom: 38px;
   }
 }
-
+.colomn2 {
+  display: flex;
+  flex-direction: column;
+  max-width: 380px;
+  margin-right: 2.08333333vw;
+  .reservation {
+    margin-bottom: 38px;
+  }
+}
