--- a/reset.css
+++ b/reset.css
@@ -53,3 +53,12 @@ html {
 *, *:after, *:before {
 	box-sizing: inherit;
 }
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
