--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -3,11 +3,11 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     link(rel="stylesheet", href="reset.css")
+    link(rel="stylesheet", href="./slick/slick.css")
     link(rel="stylesheet", href="app.css")
     link(rel="stylesheet", href="fonts.css")
-    link(rel="stylesheet", href="asRange.css")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Form-Elements
+    title Cards
   body 
     include ./mixins
     .cards
@@ -25,6 +25,9 @@ html(lang="ru")
           form.login
            +login()
         .colomn3
-    script(src="https://code.jquery.com/jquery-3.5.1.min.js")
-    script(src="https://atuin.ru/demo/ui-slider/jquery-ui.min.js")
-    script(src="../Form-Elements.js")
+          .calendar
+           +calendar()
+          .room-card-lux
+            +room-card-lux(888,"9 990",5,145)
+          .room-card
+            +room-card(840,"9 900",4,65)
