--- a/src/main.scss
+++ b/src/main.scss
@@ -85,6 +85,10 @@ input[type="reset"] {
 @import './blocks/Form-Elements/star-rate-fixed/star-rate-fixed.scss';
 @import './blocks/Cards/room-card-lux/room-card-lux.scss';
 @import './blocks/Cards/room-card/room-card.scss';
+@import './blocks/Form-Elements/apply/apply.scss';
+@import './blocks/Form-Elements/reset/reset.scss';
+@import './blocks/Form-Elements/calendar/calendar.scss';
+@import './blocks/Form-Elements/date-range/date-range.scss';
 .cards {
   max-width: 1440px;
   display: flex;
@@ -121,5 +125,17 @@ input[type="reset"] {
   margin-right: 2.08333333vw;
   .reservation {
     margin-bottom: 38px;
+  }
+}
+.colomn3 {
+  display: flex;
+  flex-direction: column;
+  max-width: 320px;
+  // margin-right: 2.08333333vw;
+  .calendar {
+    margin-bottom: 40.5px;
+  }
+  .room-card-lux {
+    margin-bottom: 39.5px;
   }
 }
