--- a/src/blocks/Cards/registration/__have-account/registration__have-account.scss
+++ b/src/blocks/Cards/registration/__have-account/registration__have-account.scss
@@ -1,6 +1,7 @@
 &__have-account {
   span {
-    margin-right: 1.82291667vw;
+    
+    margin-right: 2.4em;
     @media (max-width: 370px) {
       font-size: 12px;
     }
