Swithed vw to rem

--- a/src/blocks/Cards/room-selection/room-selection.scss
+++ b/src/blocks/Cards/room-selection/room-selection.scss
@@ -3,7 +3,7 @@
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding: 40px 1.51041667vw 30px 1.51041667vw;
+  padding: 40px 2.042857142857143rem 30px;
   @import './__title/room-selection__title.scss';
   @import './__dates/room-selection__dates.scss';
   @import './__dropdown-guests/room-selection__dropdown-guests.scss';
