--- a/src/blocks/Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.scss
+++ b/src/blocks/Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.scss
@@ -2,6 +2,7 @@
   // @import '../social/social.scss';
   &__Footer-Widgets {
     padding: 0 8px;
+    max-width: 1440px;
     height: 372px;
     display: flex;
     justify-content: center;
@@ -168,6 +169,7 @@
   &__Copyright-Bar {
     padding: 0 8px;
     display: flex;
+    max-width: 1440px;
     justify-content: center;
     align-items: center;
     height: 70px;
@@ -181,6 +183,8 @@
   }
 
   &__copyright-text {
+    align-self: center;
+    height: 18px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
