--- a/src/blocks/Standart-Nav-Bar/Standart-Nav-Bar.pug
+++ b/src/blocks/Standart-Nav-Bar/Standart-Nav-Bar.pug
@@ -3,7 +3,7 @@
     include ../logo/logo
   nav.Standart-Nav-Bar__header-menu.header-menu
     include ../header-menu/header-menu
-  .Standart-Nav-Bar__button-else.button-else
-    +button-else("войти")
-  .Standart-Nav-Bar__button-default--big.Standart-Nav-Bar__button-default.button-default
-    +button-default("зарегистрироваться")
+  button.Standart-Nav-Bar__button-login
+    p
+      span войти
+  button.Standart-Nav-Bar__button-registration зарегистрироваться
