--- a/src/blocks/Standart-Nav-Bar/_Standart-Nav-Bar.scss
+++ b/src/blocks/Standart-Nav-Bar/_Standart-Nav-Bar.scss
@@ -7,6 +7,13 @@
   justify-content: center;
   align-items: center;
   padding: 0 8px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+
   @media (max-width:891px) {
     height: 100px;
   }
@@ -16,6 +23,6 @@
   @import './__body/Standart-Nav-Bar__body.scss';
   @import './__logo/Standart-Nav-Bar__logo.scss';
   @import './__header-menu/Standart-Nav-Bar__header-menu.scss';
-  @import './__button-default/--big/Standart-Nav-Bar__button-default--big.scss';
-  @import './__button-else/Standart-Nav-Bar__button-else.scss';
+  @import './__button-login/Standart-Nav-Bar__button-login.scss';
+  @import './__button-registration/Standart-Nav-Bar__button-registration.scss';
 }
