Calculate rem from 14px (was 16px)

--- a/src/blocks/Standart-Nav-Bar/__header-menu/Standart-Nav-Bar__header-menu.scss
+++ b/src/blocks/Standart-Nav-Bar/__header-menu/Standart-Nav-Bar__header-menu.scss
@@ -1,5 +1,5 @@
 &__header-menu {
-  margin: 0.6875rem 1.25rem 0.5rem 0;
+  margin: 0.7875rem 1.428571428571429rem 0 0;
   @media (max-width:891px) {
     order: 1;
   }
