--- a/src/Headers&Footers.scss
+++ b/src/Headers&Footers.scss
@@ -5,6 +5,10 @@ body {
   outline: 0;
   outline-offset: 0;
 }
+@mixin button-w-h($width,$height) {
+  width: $width ;
+  height: $height;
+}
 @import './blocks/headers-and-footers/headers-and-footers.scss';
 @import './blocks/button-default/button-default';
 @import './blocks/button-else/button-else.scss';
